--- a/src/assets/sass/pagelayout.scss
+++ b/src/assets/sass/pagelayout.scss
@@ -15,13 +15,20 @@
  html {
    height: 100%;
    color: $text-color;
-   font-family: $font-family-sans-serif;
+   font-family: $font-family-nor;
  }
- #app{
+ 
+ div {
+   font-family: $font-family-nor;
+ }
+ 
+ #app {
    position: relative;
-   height:100%;
+   min-height: 100%;
+   padding-top: 60px;
    background: #f5f7fa;
  }
+ 
  .header {
    position: absolute;
    top: 0;
@@ -33,7 +40,7 @@
  .aside {
    position: absolute;
    top: 60px;
-   width: 200px;
+   width: 260px;
    bottom: 0;
    background: #d7dedc;
    ul {
@@ -48,20 +55,167 @@
      }
    }
    a {
-     color: $brand-primary;
+     color: $text-color;
+     &.router-link-active {
+       color: $brand-primary;
+     }
    }
  }
  
+ .brand {
+   height: 60px;
+   line-height: 60px;
+   padding-left: 20px;
+   color: #fff;
+   font-size: 30px;
+   font-weight: bold;
+ }
+ 
  .logo {
-   width: 200px;
-   height: 180px;
+   width: 128px;
+   margin: 0 auto;
    text-align: center;
+   //  float: left;
+   img {
+     width: 100%;
+   }
  }
  
  .main {
-   margin: 0 0 0 200px;
+   margin: 0 0 0 260px;
+ }
+ 
+ .content {
+   margin: 20px 0 0 20px;
+   max-width: 1200px;
+   margin-right: 10px;
+ }
+ 
+ .page-title {
+   height: 70px;
+   line-height: 70px;
+   font-size: 24px;
+   font-weight: normal;
+   padding-left: 20px;
+   border-bottom: 1px solid #cfdbe2;
+   font-size: 46px;
+   &:after {
+     content: '';
+     display: block;
+   }
+ }
+ 
+ .pri-title {
+   font-size: 26px;
+   padding-bottom: 10px;
+   margin-bottom: 10px;
+   border-bottom: 2px solid #ccc;
+ }
+ 
+ .ex-title {
+   font-size: 16px;
+ }
+ 
+ .info-list {
+   border-top: 1px solid #ccc;
+   border-right: 1px solid #ccc;
+   width: 600px;
+   dt,
+   dd {
+     border-bottom: 1px solid #ccc;
+     border-left: 1px solid #ccc;
+     height: 30px;
+     line-height: 30px;
+   }
+   dt {
+     float: left;
+     clear: both;
+     text-align: right;
+     width: 150px;
+     font-weight: bold;
+     color: #666;
+     padding-right: 20px;
+   }
+   dd {
+     margin-left: 170px;
+     padding-left: 10px;
+   }
+   &:after {
+     content: '';
+     display: block;
+     height: 1px;
+     clear: both;
+     margin-bottom: 20px;
+   }
+ }
+ 
+ .summary {
+   margin: 20px 0;
+   text-align: left;
+   border: 1px dashed #ccc;
+   background: #eee;
+   padding: 20px;
+   font-size: 16px;
+   p {
+     line-height: 24px;
+     margin-top: 10px;
+   }
+ }
+ 
+ .lable {
+   border: 1px solid $brand-primary;
+   background: #fff;
+   padding: 2px;
+   border-radius: 1px;
+ }
+ 
+ .code {
+   margin: 10px 0 20px;
+   pre {
+     background: #eee;
+     max-height: 400px;
+     max-width: 500px;
+     overflow: auto;
+   }
+   div {
+     margin: 10px;
+     color: $text-color;
+     font-size: 14px;
+   }
+ }
+ 
+ .demo-title {
+   margin-bottom: 10px;
+ }
+ 
+ .title {
+   color: $brand-primary;
+ }
+ 
+//  demo布局
+ .demoItem {
+   border: 2px solid $box-bg;
+   height: 60px;
+   margin-bottom: 10px;
+   &>div {
+     padding: 5px;
+     background: $box-bg;
+     color: #fff;
+     font-size: 12px;
+   }
+ }
+ 
+ .demobox {
+   padding: 5px;
+   background: $box-bg;
+   color: #fff;
+   font-size: 12px;
  }
 
-.content{
-  margin: 0 0 0 20px;
+.nav-item-list{
+  p{
+    height: 28px;
+    line-height: 28px;
+    cursor: pointer;
+  }
 }
