--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -16,6 +16,7 @@ $box-bg:#768294;
 
 $font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif;
+$font-family-nor:            'Helvetica Neue', Helvetica, Arial, sans-serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:        $font-family-sans-serif;
