--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -1,7 +1,7 @@
 
 
 
-// position居中
+// center-absolutely
 @mixin center-absolutely (
   $dimensions...
 ) {
@@ -23,4 +23,108 @@
     margin-top: (-$height / 2);
   }
 
+}
+
+// center-block
+@mixin center-block (
+  $max-width: false
+) {
+
+  margin-left: auto;
+  margin-right: auto;
+  @if $max-width {
+    max-width: $max-width;
+  }
+
+}
+
+%center-block {
+  @include center-block;
+}
+
+
+// center-transform
+@mixin center-transform (
+  $axis: false // or x or y
+) {
+
+  position: absolute;
+
+  @if $axis != x {
+    top: 50%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  @if $axis != y {
+    left: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  $translate-val: null;
+
+  @if not($axis) {
+    $translate-val: translate(-50%, -50%);
+  }
+  @else if $axis != x {
+    $translate-val: translateY(-50%);
+  }
+  @else if $axis != y {
+    $translate-val: translateX(-50%);
+  }
+
+  -webkit-transform: $translate-val;
+  -ms-transform: $translate-val;
+  transform: $translate-val;
+}
+
+%center-transform {
+  @include center-transform;
+}
+
+%center-transform-x {
+  @include center-transform(x);
+}
+
+%center-transform-y {
+  @include center-transform(y);
+}
+
+// clearfix
+@mixin clearfix {
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+}
+
+%clearfix {
+  @include clearfix;
+}
+
+// fill
+@mixin fill (
+  $width-height: false
+) {
+
+  position: absolute;
+  left: 0;
+  top: 0;
+  @if $width-height {
+    width: 100%;
+    height: 100%;
+  }
+  @else {
+    right: 0;
+    bottom: 0;
+  }
+
+}
+
+%fill {
+  @include fill;
 }
